# wdb-ml

./: .gitignore  .gitmodules  README.md  config.example.yaml  environment.yml  pyproject.toml
notebooks/: export_simulated_lcs_for_scope.ipynb  scope_gaia_crossmatch.ipynb  simulate_lcurve_wdbs.ipynb
patches/scope-ml/: wdb-inference-compat.patch
scripts/: combine_simulated_scope_preds.py  run_simulated_scope_features.py
src/wdb_ml/: __init__.py  bootstrap.py  inference_preflight.py  paths.py
