[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wdb-ml"
version = "0.1.0"
description = "White dwarf binary simulation and SCoPe feature-generation workflows"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "pyyaml",
    "penquins",
    "deepdiff",
    "xgboost",
]

[tool.setuptools.packages.find]
where = ["src"]
